--- a/uf1841/style.css
+++ b/uf1841/style.css
@@ -2,7 +2,9 @@
     box-sizing: border-box;
 }
 
-body {}
+body {
+    font-family: Verdana;
+}
 
 a {
     text-decoration: none;
@@ -13,10 +15,36 @@ div {
     width: fit-content;
 }
 
-.danger {}
+p {
+    font-size: 1.2rem;
+    padding: 2rem;
+    margin: 2rem;
+}
 
-.success {}
+.danger {
+    background-color: #ffdddd;
+    border-left: 8px solid #f44336;
+}
 
-.info {}
+.success {
+    background-color: #ddffdd;
+    border-left: 8px solid #04AA6D;
+}
 
-.warning {}
+.info {
+    background-color:  #e7f3fe;
+    border-left: 8px solid #2196F3
+}
+
+.warning {
+    background-color: #ffffcc;
+    border-left: 8px solid  #ffeb3b;
+    position: relative;
+}
+
+img{
+    position: absolute;
+    top : -10px;
+    right: -10px;
+
+}
